--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 
 html {
     overflow-x: hidden;
-    background: #B7C7FF;
+    background: #B2A8C3;
 }
 
 .container {
@@ -17,7 +17,7 @@ html {
 }
 
 header, footer {
-    background-color: #1C3BAD;
+    background-color: #AD13A7;
     color: #fff;
     padding-top: 16px;
 }
@@ -43,7 +43,7 @@ footer > .container {
 }
 
 nav {
-    background-color: #4169FA;
+    background-color: #7E13AD;
     padding: 16px 0;
     display: none;
 }
@@ -84,7 +84,7 @@ nav li a {
 }
 
 #sobre-abrigo img {
-    max-width: 300px;
+    max-width: 450px;
     margin-right: 24px;
 }
 
@@ -107,12 +107,12 @@ section h2 {
 }
 
 .lista-adocao {
-    flex-wrap: wrap;
+    flex-wrap: wrap;  //se o espaço não for o suficiente, os items são quebrados em uma linha horizontal
 }
 
 .lista-adocao li {
     list-style: none;
-    max-width: 30%;
+    max-width: 20%;
     margin-bottom: 24px;
 }
 
@@ -135,7 +135,7 @@ section h2 {
 
 button {
     display: block;
-    width: 50%;
+    width: 90%;
     border: none;
     padding: 6px;
     background-color: #119750;
