--- a/main.css
+++ b/main.css
@@ -1,69 +1,44 @@
-* {
+* {  /*Reset das configurações */
     margin: 0px;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Agbalumo', sans-serif;
 }
 
 html {
-    overflow-x: hidden;
-    background: #B7C7FF;
+    overflow-x: hidden; /* Esconder partes que passam da tela*/
+    background: #B7C7FF; 
 }
 
-.container {
-    max-width: 1024px;
-    width: 100%;
-    margin: 0 auto;
+header {
+    position: sticky; /* fixa o elemento na tela mesmo que a barra de rolagem abaixe*/
+    top: 0; /* posicao do elemento*/
+    left: 0; /* posicao do elemento*/
+    z-index: 1; /* ordem dos elementos fixos */
+}
+
+header h1 {
+    font-size: 50px;  /* Tamanho texto título*/
+    font-family: "Agbalumo"; /* Fonte título*/
+    margin-top: -18px;
 }
 
 header, footer {
     background-color: #1C3BAD;
     color: #fff;
-    padding-top: 16px;
-}
-
-header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-header h1 {
-    font-size: 50px;
-    font-style: italic;
-    font-family: "Currier New";
+    padding-top: 16px; /* tamanho distancia para o título*/
 }
 
 header > .container,
 footer > .container {
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 16px;
+    justify-content: space-between; /*separa os elementos no caso o hamburguer */
+    align-items: center; /* faz o alinhamento */
 }
 
-nav {
-    background-color: #4169FA;
-    padding: 16px 0;
-    display: none;
-}
-
-nav li {
-    list-style: none;
-    display: inline;
-    margin-right: 16px;
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-nav li:not(:last-child) {
-    margin-right: 26px;
-}
-
-nav li a {
-    color: #fff;
-    text-decoration: none;
+.container {
+    max-width: 1024px; /*largura maxima da página*/
+    width: 100%; /*usar toda o espaço disponivel */
+    margin: 0 auto; /*centralizar horizontalmente */
 }
 
 .hamburguer {
@@ -83,265 +58,148 @@ nav li a {
     display: flex;
 }
 
-#sobre-abrigo img {
-    max-width: 300px;
-    margin-right: 24px;
+/* menu que abaixar */
+nav {
+    background-color: #4169FA;
+    padding: 10px 10px; /* distancia cima e lado esquedo */
 }
 
-#sobre-abrigo h2 {
-    font-weight: bold;
-    font-size: 40px;
-    font-style: italic;
-}
-
-#sobre-abrigo p {
+nav li {
+    list-style: none; /*remove os marcadores */
+    display: inline;
+    margin-right: 24px; /*distancia entre os elementos*/
     font-size: 18px;
+    text-transform: uppercase;
 }
 
-section {
-    padding: 40px 0;
+nav li a {
+    color: #fff; /* cor */
+    text-decoration: none; /* remoção das linhas */
 }
 
 section h2 {
-    margin-bottom: 14px;
+    margin-top: 10px;
+    margin-bottom: 12px;
+    font-family: "Agbalumo";
+    font-size: 34px;
 }
 
-.lista-adocao {
-    flex-wrap: wrap;
+section p {
+    font-style: italic;    
 }
 
-.lista-adocao li {
-    list-style: none;
-    max-width: 30%;
-    margin-bottom: 24px;
+/* Primeira sessão, sede e descrição */
+.grid-sobre-abrigo {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "grid-casa grid-texto";
+    gap: 10px;
 }
 
-.lista-adocao li img {
+/*grid casa */
+.grid-casa {
+    position: relative;
+}
+
+.grid-casa img {
     max-width: 100%;
+    height: 85%;
+    margin-top: 16px;
 }
 
-.lista-adocao li h3 {
+/*grid-bixos*/
+.grid-bixos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    gap: 10px;
+}
+
+.bixo1, .bixo2, .bixo3, .bixo4, .bixo5 .bixo6 .bixo7 .bixo8 {
+    position: relative;
+}
+
+.bixo1 h3, .bixo2 h3, .bixo3 h3, .bixo4 h3, .bixo5 h3, .bixo6 h3, .bixo7 h3, .bixo8 h3 {
     margin: 6px 0;
-}
+} /*nome do pet */
 
-.lista-adocao p {
-    font-size: 18px;
-    margin-bottom: 10px;
-}
+.bixo1 p, .bixo2 p, .bixo3 p, .bixo4 p, .bixo5 p, .bixo6 p, .bixo7 p, .bixo8 p {
+    font-size: 16px;
+    margin-top: -8px;
+} /*raça */
 
-.item-central {
-    margin: 0 5%;
+.bixo1 img, .bixo2 img, .bixo3 img, .bixo4 img, .bixo5 img, .bixo6 img, .bixo7 img, .bixo8 img{
+    max-width: 100%;
+    height: 70%; /*define a proporção das figuras */
 }
 
 button {
-    display: block;
     width: 50%;
     border: none;
-    padding: 6px;
+    padding: 4px;
     background-color: #119750;
     color: #fff;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     font-style: italic;
     cursor: pointer;
     border-radius: 6px;
+    margin-bottom: 22px;
+}
+
+footer {
+    margin-top: 20px;
 }
 
 footer li {
-    list-style: none;
     margin-left: 16px;
-    display: inline-block;
+    list-style: none;
 }
 
 footer li img {
-    height: 32px;
+    height: 20px;
 }
 
-@media (min-width: 641px) and (max-width: 1023px){
-    header h1 {
-        font-size: 32px; /*tamanho do título */
-        margin-left: 16px; /*margem do título */
-    }
-    
-    header > .container,
-    footer > .container {
-    padding-bottom: 12px; /*tamanho a baixo da caixa de fundo do título*/
-    }
+footer p {
+    margin-left: 16px;
+    margin-bottom: 8px;
+}
 
-    .container {
-        width: 95%;
-    }
+footer .container ul {
+    padding: 0;
+    display: flex;
+}
 
-    .hamburguer {
-        width: 24px; /*comprimento hamburger */
+@media (min-width: 641px) and (max-width: 1023px) {
+    header h1, footer h1 {
+        margin-left: 30px;
     }
     
     .hamburguer span {
-        margin-bottom: 4px; /* margem entre os hamburguers */
-    }    
-
-    nav {
-        padding: 12px 0; /*tamanho do spam */
-        }
-
-    nav li {
-        margin-left: 14px; /*margem da esquerda do span */
-        font-size: 12px; /*tamanho fonte spam */
-    }
-
-    #sobre-abrigo img {
-        margin-left: 6px;  /*margem da figura do site */
-        margin-right: 4px;   /*ajuste da margem direita para a figura */
-    }
-
-    #sobre-abrigo h2 {
-        font-size: 32px; /*Título do texto*/
-    } 
-
-    #sobre-abrigo p {
-        margin-left: 10px; /*margem do texto*/
-        margin-right: 16px;
-    }
-
-    section {
-        padding: 32px 0; /*espaçamento entre a imagem principal e o header */
+        width: 60%;
     }
 
     section h2 {
-        margin-bottom: 16px;  /* margem do título texto para o texto */
-        margin-left: 10px;   /*margem do texto*/
-        font-size: 20px; /* tamanho da fonte no destaque do mês */
-        margin-bottom: 6px; /*margem do destaque do mes para as fotos*/
+        margin-bottom: 0px;
     }
 
-    .lista-adocao li {
-        max-width: 46%;
-        margin-bottom: 24px; /*margem da figura adoção para a proxima foto */
-        margin-left: 10px;
-    }
-
-    .lista-adocao li h3 {
-        margin: 5px 0; /*margim nome dos bixos */
-        font-size: 18px; /*fonte do nome dos bixos */
-    }
-
-    .lista-adocao p {
-        margin-bottom: 6px; /*margem da descrição para o botão */
-    }
-
-    button {
-        width: 80%; /*proporção do tamanho do botão com a figura*/
-        padding: 6px; /*largura do botão */
-        font-size: 16px;
-    }
-   
-    footer li {
-        margin-left: 16px;
-    }
-
-    footer li img {
-        height: 26px;
-    }
-
-    footer p {
-        margin-left: 16px;
-    }
-
-    .item-central-tablet {
-        margin: 0 0%;
-    }
-}
-
-@media screen and (max-width: 640px) {
-    header h1 {
-        font-size: 26px; /*tamanho do título */
-        margin-left: 16px; /*margem do título */
-    }
     
-    header > .container,
-    footer > .container {
-    padding-bottom: 8px; /*tamanho a baixo da caixa de fundo do título*/
+    .grid-sobre-abrigo {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "grid-casa" 
+            "grid-texto";
+    }
+
+    .grid-bixos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        gap: 10px;
     }
 
     .container {
-        width: 95%;
+        width: 90%
     }
-
-    .hamburguer {
-        width: 16px; /*comprimento hamburger */
-    }
-    
-    .hamburguer span {
-        margin-bottom: 5px; /* margem entre os hamburguers */
-    }    
-
-    nav {
-        padding: 6px 0; /*tamanho do spam */
-        }
-
-    nav li {
-        margin-left: 14px; /*margem da esquerda do span */
-        font-size: 10px; /*tamanho fonte spam */
-    }
-
-    #sobre-abrigo img {
-        margin-left: 2px;  /*margem da figura do site */
-        margin-right: 4px;   /*ajuste da margem direita para a figura */
-    }
-
-    #sobre-abrigo h2 {
-        font-size: 24px; /*Título do texto*/
-    } 
-
-    #sobre-abrigo p {
-        font-size: 16px; /*texto página*/
-        margin-left: 10px; /*margem do texto*/
-    }
-
-    section {
-        padding: 20px 0; /*espaçamento entre a imagem principal e o header */
-    }
-
-    section h2 {
-        margin-bottom: 16px;  /* margem do título texto para o texto */
-        margin-left: 10px;   /*margem do texto*/
-        font-size: 20px; /* tamanho da fonte no destaque do mês */
-        margin-bottom: 6px; /*margem do destaque do mes para as fotos*/
-    }
-
-    .lista-adocao li {
-        list-style: none;  /*tira a marcação do li*/
-        max-width: 100%;
-        margin-bottom: 24px; /*margem da figura adoção para a proxima foto */
-        margin-left: 10px;
-    }
-
-    .lista-adocao li h3 {
-        margin: 3px 0; /*margim nome dos bixos */
-        font-size: 18px; /*fonte do nome dos bixos */
-    }
-
-    .lista-adocao p {
-        margin-bottom: 4px; /*margem da descrição para o botão */
-    }
-
-    button {
-        width: 70%; /*proporção do tamanho do botão com a figura*/
-        padding: 4px; /*largura do botão */
-        font-size: 16px;
-    }
-   
-    footer li {
-        margin-left: 16px;
-    }
-
-    footer li img {
-        height: 20px;
-    }
-
-    footer p {
-        margin-left: 16px;
-    }
-}  
-
-
+}
