--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ header {
 }
 
 header h1 {
-    font-size: 50px;  /* Tamanho texto título*/
+    font-size: 4em;  /* Tamanho texto título*/
     font-family: "Agbalumo"; /* Fonte título*/
     margin-top: -18px;
 }
@@ -42,7 +42,7 @@ footer > .container {
 }
 
 .hamburguer {
-    width: 32px;
+    width: 2.3em;
     cursor: pointer;
 }
 
@@ -68,7 +68,7 @@ nav li {
     list-style: none; /*remove os marcadores */
     display: inline;
     margin-right: 24px; /*distancia entre os elementos*/
-    font-size: 18px;
+    font-size: 1em;
     text-transform: uppercase;
 }
 
@@ -94,6 +94,9 @@ section p {
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "grid-casa grid-texto";
     gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*grid casa */
@@ -105,6 +108,7 @@ section p {
     max-width: 100%;
     height: 85%;
     margin-top: 16px;
+    margin-bottom: -16px;
 }
 
 /*grid-bixos*/
@@ -147,34 +151,39 @@ button {
     margin-bottom: 22px;
 }
 
-footer {
-    margin-top: 20px;
-}
-
-footer li {
-    margin-left: 16px;
-    list-style: none;
-}
-
-footer li img {
-    height: 20px;
-}
-
 footer p {
-    margin-left: 16px;
+    font-size: 16px;
     margin-bottom: 8px;
 }
 
-footer .container ul {
-    padding: 0;
-    display: flex;
+.grid-cabecalho {
+    display: grid;
+    grid-template-columns: repeat(1,1fr)
+
 }
 
+.cabecalho {
+    height: 90%;
+}
+
+.cabecalho img {
+    height: 50%;
+}
+
+
 @media (min-width: 641px) and (max-width: 1023px) {
+    header h1 {
+        font-size: 6vh; 
+    }
+
     header h1, footer h1 {
         margin-left: 30px;
     }
     
+    .hamburguer {
+        width: 3.5em;
+    }
+
     .hamburguer span {
         width: 60%;
     }
@@ -201,5 +210,64 @@ footer .container ul {
 
     .container {
         width: 90%
+    }
+}
+
+@media (max-width: 640px) {
+    header h1 {
+        font-size: 4.5vh; 
+    }
+
+    header h1, footer h1 {
+        margin-left: 10px;
+    }
+    
+    nav li {
+        font-size: 0.7em;
+        margin-right: 2.5vh;;
+    }
+
+    .hamburguer {
+        width: 3.5em;
+    }
+
+    .hamburguer span {
+        width: 40%;
+    }
+
+    section h2 {
+        margin-bottom: 0px;
+        font-size: 1.8em;
+    }
+
+    .grid-sobre-abrigo {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "grid-casa" 
+            "grid-texto";
+    }
+
+    .grid-bixos {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
+        gap: 10px;
+    }
+
+    .container {
+        width: 90%
+    }
+
+    .cabecalho {
+        height: 90%;
+        margin-bottom: -4vh;
+    }
+    .cabecalho img {
+        height: 60%;
+    }
+
+    footer p {
+        margin-bottom: -1.5vh;
     }
 }
