--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#corpo {
+*#corpo {
     background: #F2D0A7; 
 }
 
@@ -14,4 +14,16 @@
 .login-links li {
     list-style: none;
     display: inline;
+}
+
+.carousel-control-prev {
+    left:15%;
+    top:50%;
+    transform: translateY(-50%);
+}
+
+.carousel-control-next {
+    left:70%;
+    top:50%;
+    transform: translateY(-50%);
 }
